# TRIMANA_ENGINE

./: .gitmodules  CMakeLists.txt  LICENSE.txt
lib/: Build.py
lib/imgui_docking/: CMakeLists.txt
lib/imgui_docking/config/: imguiConfig.cmake.in
res/models/78176/: 78176.c4d  78176.dae  78176.fbx  78176.max  78176.mtl  78176.skp
res/shaders/: Batch2DFragment.glsl  Batch2DVertex.glsl  Fragment3D.glsl  Vertex3D.glsl
src/app/camera/: primary_camera.cpp  primary_camera.hpp
src/app/entrypoint/: app_pch.hpp  application.cpp  application.hpp  application_layer.hpp  application_layers_stack.cpp  application_layers_stack.hpp  main.cpp  sandbox.cpp  sandbox.hpp
src/app/imgui/: imgui_keycodes.hpp  imgui_layer.cpp  imgui_layer.hpp  tgui.cpp  tgui.hpp
src/core/: base.hpp  trimana_core.hpp
src/core/events/: events.hpp  events_receiver.cpp  events_receiver.hpp  glfw_events_receiver.cpp  glfw_events_receiver.hpp  glfw_inputs_poll.cpp  glfw_inputs_poll.hpp  inputs_handler.cpp  inputs_handler.hpp  keyboard_events.hpp  mouse_events.hpp  sdl_events_receiver.cpp  sdl_events_receiver.hpp  sdl_inputs_poll.cpp  sdl_inputs_poll.hpp  window_events.hpp
src/core/renderer/: buffers.cpp  buffers.hpp  camera.hpp  camera2d.cpp  camera2d.hpp  camera3d.cpp  camera3d.hpp  context.cpp  context.hpp  frame_buffer.cpp  frame_buffer.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp
src/core/renderer/opengl/: gl_buffers.cpp  gl_buffers.hpp  gl_context.cpp  gl_context.hpp  gl_debug.cpp  gl_debug.hpp  gl_frame_buffer.cpp  gl_frame_buffer.hpp  gl_renderer.cpp  gl_renderer.hpp  gl_shader.cpp  gl_shader.hpp  gl_texture.cpp  gl_texture.hpp  gl_vertex_array.cpp  gl_vertex_array.hpp  glfw_gl_context.cpp  glfw_gl_context.hpp  sdl_gl_context.cpp  sdl_gl_context.hpp
src/core/subcore/: asserts.hpp  base.hpp  core_pch.hpp  delta_time.hpp  exceptions.hpp  key_codes.hpp  keycodes.hpp  log.cpp  log.hpp
src/core/window/: base_window.hpp  core.cpp  core.hpp  glfw_window.cpp  glfw_window.hpp  sdl_window.cpp  sdl_window.hpp  window.cpp  window.hpp  window_base.hpp
src/window/: window.hpp
